--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -11,6 +11,7 @@ body {
 
 body {
   font-family: 'Yanone Kaffeesatz', sans-serif;
+  color: #838485;
 }
 
 h1,
@@ -18,10 +19,16 @@ h2 {
   margin-bottom: 20px; 
 }
 
-.vertical-center {
-  position: relative;
-  top: 50%;
-  transform: translatey(-50%);
+h1 {
+  font-size: 4.25em;
+  color: white;
+  text-shadow: 3px 3px 0px rgba(115,174,222,1);
+}
+
+h2 {
+  color: #366993;
+  font-size: 2.5em;
+  text-transform: uppercase;
 }
 
 form {
@@ -29,7 +36,6 @@ form {
   max-width: 560px;
   margin: 0 auto;
 }
-
 
 .field {
   display: block;
@@ -100,16 +106,10 @@ button {
   }
 }
 
-h1 {
-  font-size: 4.25em;
-  color: white;
-  text-shadow: 3px 3px 0px rgba(115,174,222,1);
-}
-
-h2 {
-  color: #366993;
-  font-size: 2.5em;
-  text-transform: uppercase;
+.vertical-center {
+  position: relative;
+  top: 50%;
+  transform: translatey(-50%);
 }
 
 .container {
@@ -136,4 +136,9 @@ article {
 
 .feature-content {
   margin: 60px 0;
+}
+
+table {
+  width: 100%;
+  text-align: left;
 }
