--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -44,6 +44,9 @@ a {
   }
 }
 
+.pull-l { float: left; }
+.pull-r { float: right; }
+
 form {
   width: 100%;
   max-width: 560px;
@@ -259,9 +262,16 @@ td {
   text-align: right;
   border: none;
   background-color: transparent;
+  span {
+    font-size: 0.8em;
+    vertical-align: middle;
+    text-transform: uppercase;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+  }
 }
 
-.fa-trash-o {
+.fa-trash-o,
+.fa-trash-o + span {
   color: #d27780;
   transition: color 0.5s;
   &:hover {
